--- a/grammar/parser.template
+++ b/grammar/parser.template
@@ -13,6 +13,9 @@ use PhpParser\Node\Expr;
 use PhpParser\Node\Name;
 use PhpParser\Node\Scalar;
 use PhpParser\Node\Stmt;
+use PhpParser\NodesList;
+use PhpParser\Tag;
+
 #include;
 
 /* This is an automatically GENERATED file, which should not be manually edited.
